[package]
name = "reqwest-with-rusttls-stops-after-360mb"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.24", default-features = false, features = [
    "stream",
    "rustls-tls",
    # "default-tls",

] }
tokio = { version = "1.36.0", default-features = false, features = [
    "macros",
    "rt"
] }
